OESE-255 fix subject resources topic area button color and spacing of resource details

--- a/css/nalrc.css
+++ b/css/nalrc.css
@@ -115,10 +115,13 @@
 	color:#FFFFFF;
 	text-decoration: none;
 }
-.nalrc-main #sngl-resource .nalrc-resource-row:last-child { margin-bottom:0px; }
+.nalrc-main #sngl-resource .nalrc-resource-row:last-child {  }
 .nalrc-main #sngl-resource .nalrc-resource-thumbnail { text-align:center; margin-bottom:10px; }
 .nalrc-main #sngl-resource .nalrc-resource-thumbnail .oer-featureimg img { width:175px; }
 .nalrc-featured-thumbnail { margin-top:-45px; }
+.nalrc-main #sngl-resource .oer-subject-resources-list .post.oer-snglrsrc .tagcloud span a { color: #FFFFFF !important; text-decoration: none; }
+.nalrc-main #sngl-resource .oer-subject-resources-list .post.oer-snglrsrc .tagcloud span a:hover { color:#414141; }
+.nalrc-content-row { flex-wrap:nowrap; }
 /** End of NALRC Resource Styles **/
 /** NALRC Resources Styles **/
 .site-content.nalrc-resources-content { margin-top:30px; }
